methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:8: error: expected start of definition
override def run() {
         ^MethodsPicture:17: error: Unmatched closing brace '}' ignored here
}
^